syntax = "proto3";

package kv_server;

service KvDb {

    rpc Get (GetRequest) returns (GetResponse) {}
    rpc Set (SetRequest) returns (SetResponse) {}
    rpc Delete (DelRequest) returns (DelResponse) {}
    rpc Scan (ScanRequest) returns (ScanResponse) {}
}

enum Status {
    Success = 0;
    NotFound = 1;
    Insert = 2;
    Overwrite = 3;
    Empty = 4;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    Status status = 1;
    string value = 2;
}

message SetRequest {
    string key = 1;
    string value = 2;
}

message SetResponse {
    Status status = 1;
    string value = 2;
}

message DelRequest {
    string key = 1;
}

message DelResponse {
    Status status = 1;
    string value = 2;
}

message ScanRequest {
}

message ScanResponse {
    Status status = 1;
    map<string, string> key_value = 2;
}